--- a/LabCompras/src/LabCompras/Views/Despesas/Index.cshtml
+++ b/LabCompras/src/LabCompras/Views/Despesas/Index.cshtml
@@ -1,7 +1,37 @@
-﻿@{
+﻿@model List<LabCompras.Models.Despesa>
+
+@{
     ViewData["Title"] = "Despesas";
 }
 
-<h1>@ViewData["Title"]</h1>
+<h201>@ViewData["Title"]</h201>
 
+@if (Model.Count == 0)
+{
+    <p>Sem despesas :D</p>
+}
+else
+{
+    @foreach (LabCompras.Models.Despesa despesa in Model)
+    {
+        <div class="jumbotron">
+            <p>Nome da Despesa: @despesa.NomeDespesa </p>
+            <p>Quantidade: @despesa.Quantidade</p>
+            <p>Valor: @despesa.Valor</p>
+            <p>Categoria: @despesa.Categoria</p>
+            <p>
+                Pago?
+
+                @if (despesa.Pago)
+                {
+                    @:Sim
+    }
+                else
+                {
+                    @:Não
+    }
+            </p>
+        </div>
+    }
+}
 <a asp-action="NovaDespesa" class="btn btn-primary"><span class="glyphicon glyphicon-plus"> Despesa</span></a>
